--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 ﻿v20==3.0.25.0
-pytz==2019.3
+pytz==2024.1
 matplotlib==3.9.0
-numpy==1.21.0
+numpy==1.26.4
 pandas==1.2.5
 scikit_learn==0.24.2
 yfinance==0.1.59
-fastapi
-uvicorn
-requests
+fastapi==0.115.0
+uvicorn==0.30.1
+requests==2.32.3
 python-dotenv
-
 dotenv
+
