--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,10 @@
 pytz==2024.1
 matplotlib==3.9.0
 numpy==1.26.4
-pandas==1.2.5
-scikit_learn==0.24.2
-yfinance==0.1.59
+pandas==2.1.1
+scikit_learn==1.3.2
+yfinance==0.2.27
 fastapi==0.115.0
 uvicorn==0.30.1
 requests==2.32.3
-python-dotenv
-dotenv
-
+python-dotenv==1.1.1
