--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
-﻿v20==3.0.25.0
+# Broker & API
+v20==3.0.25.0
+
+# Dates et temps
 pytz==2024.1
-matplotlib==3.9.0
-numpy==1.26.4
-pandas==2.1.1
-scikit_learn==1.3.2
-yfinance==0.2.27
-fastapi==0.115.0
-uvicorn==0.30.1
-requests==2.32.3
+
+# Data analysis
+numpy==1.25.2
+pandas==2.0.3
+scikit-learn==1.3.2
+matplotlib==3.7.2
+
+# Web & env
 python-dotenv==1.1.1
+yfinance==0.2.44
+
